Create /new Path to Post Messages
- Added new.js inside /routes/ directory which is handles pathname /new.
on GET request new.js renders new.ejs & on POST request it saves
submitted message and redirects to '/' URL path (Homepage).
- new.ejs renders a POST form with author name & message with link to
discard the message and go to '/'.
- messages array now resides in its own messages.js in root directory.
- Changed nodemon to dev-dependency.
- Updated var to const.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,18 @@
 		<link rel="stylesheet" href="/stylesheets/style.css" />
 	</head>
 	<body>
-		<h1><%= locals.title %></h1>
-		<% locals.messages.forEach(message => { %>
-		<article>
-			<p><%= message.text %></p>
-			<span><%= message.user %></span>
-			<span><%= message.added %></span>
-		</article>
-		<% }); %>
+		<header>
+			<h1><%= locals.title %></h1>
+			<a href="./new">Add Message</a>
+		</header>
+		<main>
+			<% locals.messages.forEach(message => { %>
+			<article>
+				<p><%= message.text %></p>
+				<span><%= message.user %></span>
+				<span><%= message.added %></span>
+			</article>
+			<% }); %>
+		</main>
 	</body>
 </html>
